--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -130,147 +130,146 @@ cards:
     fullWidth: true
     abstract: >
       Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data from the
-      four nations may not be directly comparable as data about COVID-19 patients in
-      hospitals are collected differently. Data are not reported by each nation every
-      day. The UK figure is the sum of the four nations' figures and can only be calculated
-      when all nations' data are available.  Scotland stopped reporting admissions on 22 July.
+      four nations are not comparable as Wales include suspected COVID-19 patients while the
+      other nations include only confirmed cases.  Scotland stopped reporting admissions on
+      22 July.  For these reasons, no UK figure is available since then.
 
-    options:
-      type: radio
-      heading: null
-      choices:
-        - By nation
-        - UK total
+    # options:
+    #   type: radio
+    #   heading: null
+    #   choices:
+    #     - By nation
+    #     - UK total
     
-    By nation:
-      download:
-        - newAdmissions
-        - cumAdmissions
+    # By nation:
+    download:
+      - newAdmissions
+      - cumAdmissions
 
-      tabs:
-        - heading: Daily
-          tabType: chart
-          barType: stack
-          colours: [0, 9, 3, 10] # areaNames in alphabetical order
-          params:
-            - key: areaType
-              sign: "="
-              value: nation
+    tabs:
+      - heading: Daily
+        tabType: chart
+        barType: stack
+        colours: [0, 9, 3, 10] # areaNames in alphabetical order
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
 
-          fields:
-            - label: ""
-              value: newAdmissions
-              tooltip: Daily number of COVID-19 patients admitted to hospital
-              type: bar
-              rollingAverage: false
+        fields:
+          - label: ""
+            value: newAdmissions
+            tooltip: Daily number of COVID-19 patients admitted to hospital
+            type: bar
+            rollingAverage: false
 
-        - heading: Cumulative
-          tabType: chart
-          barType: stack
-          colours: [0, 9, 3, 10] # areaNames in alphabetical order
-          params:
-            - key: areaType
-              sign: "="
-              value: nation
+      - heading: Cumulative
+        tabType: chart
+        barType: stack
+        colours: [0, 9, 3, 10] # areaNames in alphabetical order
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
 
-          fields:
-            - label: ""
-              value: cumAdmissions
-              tooltip: Cumulative total number of COVID-19 patients admitted to hospital
-              type: bar
-              rollingAverage: false
+        fields:
+          - label: ""
+            value: cumAdmissions
+            tooltip: Cumulative total number of COVID-19 patients admitted to hospital
+            type: bar
+            rollingAverage: false
 
-        - heading: Data
-          tabType: table
-          params:
-            - key: areaType
-              sign: "="
-              value: nation
+      - heading: Data
+        tabType: table
+        params:
+          - key: areaType
+            sign: "="
+            value: nation
 
-          fields:
-            - label: Date reported
-              value: date
-              type: date
-              tooltip: Date reported by healthcare providers
+        fields:
+          - label: Date reported
+            value: date
+            type: date
+            tooltip: Date reported by healthcare providers
 
-            - label: daily
-              value: newAdmissions
-              type: numeric
-              tooltip: Daily number of COVID-19 patients admitted to hospital
+          - label: daily
+            value: newAdmissions
+            type: numeric
+            tooltip: Daily number of COVID-19 patients admitted to hospital
 
-            - label: total
-              value: cumAdmissions
-              type: numeric
-              tooltip: Cumulative total number of COVID-19 patients admitted to hospital
+          - label: total
+            value: cumAdmissions
+            type: numeric
+            tooltip: Cumulative total number of COVID-19 patients admitted to hospital
 
-        - heading: About 
-          tabType: metadata
-          filename: cardMetadata/healthcare/cardPatientsAdmittedToHospital.md
+      - heading: About 
+        tabType: metadata
+        filename: cardMetadata/healthcare/cardPatientsAdmittedToHospital.md
 
-    UK total:
-      download:
-        - newAdmissions
-        - cumAdmissions
+    # UK total:
+      # download:
+      #   - newAdmissions
+      #   - cumAdmissions
 
-      tabs:
-        - heading: Daily
-          tabType: chart
-          barType: stack
-          colours: [0] # areaNames in alphabetical order
-          params:
-            - key: areaType
-              sign: "="
-              value: overview
+      # tabs:
+      #   - heading: Daily
+      #     tabType: chart
+      #     barType: stack
+      #     colours: [0] # areaNames in alphabetical order
+      #     params:
+      #       - key: areaType
+      #         sign: "="
+      #         value: overview
 
-          fields:
-            - label: ""
-              value: newAdmissions
-              tooltip: Daily number of COVID-19 patients admitted to hospital
-              type: bar
-              rollingAverage: false 
+      #     fields:
+      #       - label: ""
+      #         value: newAdmissions
+      #         tooltip: Daily number of COVID-19 patients admitted to hospital
+      #         type: bar
+      #         rollingAverage: false 
 
-        - heading: Cumulative
-          tabType: chart
-          barType: stack
-          colours: [0] # areaNames in alphabetical order
-          params:
-            - key: areaType
-              sign: "="
-              value: overview
+      #   - heading: Cumulative
+      #     tabType: chart
+      #     barType: stack
+      #     colours: [0] # areaNames in alphabetical order
+      #     params:
+      #       - key: areaType
+      #         sign: "="
+      #         value: overview
 
-          fields:
-            - label: ""
-              value: cumAdmissions
-              tooltip: Cumulative total number of COVID-19 patients admitted to hospital
-              type: bar
-              rollingAverage: false
+      #     fields:
+      #       - label: ""
+      #         value: cumAdmissions
+      #         tooltip: Cumulative total number of COVID-19 patients admitted to hospital
+      #         type: bar
+      #         rollingAverage: false
 
-        - heading: Data
-          tabType: table
-          params:
-            - key: areaType
-              sign: "="
-              value: overview
+      #   - heading: Data
+      #     tabType: table
+      #     params:
+      #       - key: areaType
+      #         sign: "="
+      #         value: overview
 
-          fields:
-            - label: Date reported
-              value: date
-              type: date
-              tooltip: Date reported by healthcare providers
+      #     fields:
+      #       - label: Date reported
+      #         value: date
+      #         type: date
+      #         tooltip: Date reported by healthcare providers
 
-            - label: daily
-              value: newAdmissions
-              type: numeric
-              tooltip: Daily number of COVID-19 patients admitted to hospital
+      #       - label: daily
+      #         value: newAdmissions
+      #         type: numeric
+      #         tooltip: Daily number of COVID-19 patients admitted to hospital
 
-            - label: total
-              value: cumAdmissions
-              type: numeric
-              tooltip: Cumulative total number of COVID-19 patients admitted to hospital
+      #       - label: total
+      #         value: cumAdmissions
+      #         type: numeric
+      #         tooltip: Cumulative total number of COVID-19 patients admitted to hospital
 
-        - heading: About 
-          tabType: metadata
-          filename: cardMetadata/healthcare/cardPatientsAdmittedToHospital.md
+      #   - heading: About 
+      #     tabType: metadata
+      #     filename: cardMetadata/healthcare/cardPatientsAdmittedToHospital.md
 
   - heading: Patients admitted to hospital, by age
     caption: Counts
