--- a/Layouts/UKSummary.yaml
+++ b/Layouts/UKSummary.yaml
@@ -53,7 +53,7 @@ summary:
             value: cumCasesByPublishDate
             tooltip: Cumulative total number of people with a lab-confirmed positive test result reported on {date}
 
-# # {{ StartDevOnlyBlock }}
+# {{ StartDevOnlyBlock }}
 # # Not currently publishing people tested
 
 #       - caption: All people tested
@@ -73,8 +73,7 @@ summary:
 #           - label: Total
 #             value: cumPeopleTestedByPublishDate
 #             tooltip: Cumulative total number of people tested (positive or negative) reported on {date}
-
-# # {{ EndDevOnlyBlock }}
+# {{ EndDevOnlyBlock }}
 
   - heading: Healthcare
     fields:
