--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -9,7 +9,7 @@ headlineNumbers:
         value: cumAdmissions
         tooltip: Cumulative total number of COVID-19 patients admitted to hospital, reported on {date}
 
-# # {{ StartDevOnlyBlock }}
+# {{ StartDevOnlyBlock }}
 # # Not currently publishing patients discharged: needs discussion with NHS to agree definitions.
 # # We don't currently pull in the data from the DAs on this - they did agree to provide it when
 # # asked by the No 10 Press data team, but we have never finalised it
@@ -24,7 +24,7 @@ headlineNumbers:
 #         value: cumDischarges
 #         tooltip: Cumulative total number of COVID-19 discharged home from to hospital, reported on {date}
 
-# # {{ EndDevOnlyBlock }}
+# {{ EndDevOnlyBlock }}
 
   - caption: Patients in hospital
     valueItems:
@@ -814,7 +814,7 @@ cards:
           tabType: metadata
           filename: cardMetadata/healthcare/cardPatientsInMVBeds.md
 
-# # {{ StartDevOnlyBlock }}
+# {{ StartDevOnlyBlock }}
 # # Not currently publishing patients discharged: needs discussion with NHS to agree definitions.
 # # We don't currently pull in the data from the DAs on this - they did agree to provide it when
 # # asked by the No 10 Press data team, but we have never finalised it
@@ -823,10 +823,10 @@ cards:
 #     cardType: chart
 #     fullWidth: true
 
-#     # {{ StartDevOnlyBlock }}
+    # {{ StartDevOnlyBlock }}
 #     abstract: > 
 #       COVID-19 patients discharged home from hospital.
-#     # {{ EndDevOnlyBlock }}
+    # {{ EndDevOnlyBlock }}
 
 #     download:
 #       - newDischarges
@@ -887,11 +887,11 @@ cards:
 #     cardType: ageSexBreakdown
 #     fullWidth: false
 
-#     # {{ StartDevOnlyBlock }}
+    # {{ StartDevOnlyBlock }}
 #     # GA added 20200715 
 #     abstract: >
 #       COVID-19 patients discharged home from hospital since the start of the pandemic, by age.  
-#     # {{ EndDevOnlyBlock }}
+    # {{ EndDevOnlyBlock }}
 
 #     download:
 #       - cumAdmissionsByAge
@@ -946,10 +946,10 @@ cards:
 #     cardType: ageSexBreakdown
 #     fullWidth: false
 
-#     # {{ StartDevOnlyBlock }}
+    # {{ StartDevOnlyBlock }}
 #     abstract: >
 #       COVID-19 patients discharged home from hospital per 100,000 resident population since the start of the pandemic, by age.  
-#     # {{ EndDevOnlyBlock }}
+    # {{ EndDevOnlyBlock }}
 
 #     download:
 #       - cumDischargesByAge
