--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -129,10 +129,9 @@ cards:
 
     fullWidth: true
     abstract: >
-      Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data from the
-      four nations are not comparable as Wales include suspected COVID-19 patients while the
-      other nations include only confirmed cases.  Scotland stopped reporting admissions on
-      22 July.  For these reasons, no UK figure is available since then.
+      Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data are not
+      updated every day and data from the four nations are not comparable as Wales include
+      suspected COVID-19 patients while the other nations include only confirmed cases.
 
     # options:
     #   type: radio
