Correct Scotland statement

--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -131,8 +131,8 @@ cards:
     abstract: >
       Daily and cumulative numbers of COVID-19 patients admitted to hospital. Data from the
       four nations are not comparable as Wales include suspected COVID-19 patients while the
-      other nations include only confirmed cases.  Scotland stopped reporting admissions on
-      22 July.  For these reasons, no UK figure is available since then.
+      other nations include only confirmed cases. Data are not updated every day by all four
+      nations.
 
     # options:
     #   type: radio
