--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1045,7 +1045,7 @@ cards:
     fullWidth: false
     abstract: >
       COVID-19 cases in England by Middle Super Output Area (MSOA).  MSOAs are small areas
-      with around 7,200 average population.
+      with around 7,200 average population.  The data are updated every Thursday.
 
     image: 
       url: https://c19pubdev.azureedge.net/assets/images/msoa-outline.png
