--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -10,17 +10,17 @@ headlineNumbers:
         tooltip: Cumulative total number of people with a lab-confirmed positive test result reported up to {date}
         
 # {{ StartDevOnlyBlock }}
-# # People tested not currently being published
+# People tested not currently being published
 
-#   - caption: All people tested
-#     valueItems:
-#       - label: Daily
-#         value: newPeopleTestedByPublishDate
-#         tooltip: Daily number of new people tested (positive or negative) reported on {date}
+  - caption: All people tested (Dev Only)
+    valueItems:
+      - label: Daily
+        value: newPeopleTestedByPublishDate
+        tooltip: Daily number of new people tested (positive or negative) reported on {date}
 
-#       - label: Total
-#         value: cumPeopleTestedByPublishDate
-#         tooltip: Cumulative total number of people tested (positive or negative) reported up to {date}
+      - label: Total
+        value: cumPeopleTestedByPublishDate
+        tooltip: Cumulative total number of people tested (positive or negative) reported up to {date}
 
 # {{ EndDevOnlyBlock }}
 
@@ -325,162 +325,160 @@ cards:
         filename: cardMetadata/cases/cardCasesTimeSeries.md
 
 # {{ StartDevOnlyBlock }}
-# # not live
-# # People tested not currently being published
+# not live
+# People tested not currently being published
 
-#   - heading: Daily people tested
-#     cardType: chart
-#     fullWidth: true
-#     # TODO: PF to check - had to create additional genPeopleTested not specific to daily/cumulative/by test data/by specimen date.
-#     # Why is this on the Cases page and repeated on the Tested page - just to show cases and tests side by side?  If so maybe card needs different title?
+  - heading: Daily people tested (Dev Only)
+    cardType: chart
+    fullWidth: true
+    # TODO: PF to check - had to create additional genPeopleTested not specific to daily/cumulative/by test data/by specimen date.
+    # Why is this on the Cases page and repeated on the Tested page - just to show cases and tests side by side?  If so maybe card needs different title?
 
-#     abstract: >
-#       Number of people with at least one lab-confirmed positive or negative COVID-19 test result. 
-#       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
-#       different dates between 15th June and 14th July for each nation.  National data are not directly comparable.
+    abstract: >
+      Number of people with at least one lab-confirmed positive or negative COVID-19 test result. 
+      Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
+      different dates between 15th June and 14th July for each nation.  National data are not directly comparable.
 
-#     download:
-#       - newCasesBySpecimenDate
-#       - cumCasesBySpecimenDate
-#       - newPeopleTestedBySpecimenDate
-#       - cumPeopleTestedBySpecimenDate
+    download:
+      - newCasesBySpecimenDate
+      - cumCasesBySpecimenDate
+      - newPeopleTestedBySpecimenDate
+      - cumPeopleTestedBySpecimenDate
 
-#     options:
-#       type: radio
-#       heading: null
-#       choices:
-#         - Specimen date
-#         - Reporting date
+    options:
+      type: radio
+      heading: null
+      choices:
+        - Specimen date
+        - Reporting date
 
-#     Specimen date:
-#       tabs:
-#         - heading: Daily
-#           tabType: chart
-#           barType: overlay
-#           fields:
-#             - label: Number of people tested
-#               value: newPeopleTestedBySpecimenDate
-#               tooltip: Daily number of people tested (positive or negative) by date the sample was taken from the person
-#               type: bar
-#               colour: 0
-#               rollingAverage: false
+    Specimen date:
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: overlay
+          fields:
+            - label: Number of people tested
+              value: newPeopleTestedBySpecimenDate
+              tooltip: Daily number of people tested (positive or negative) by date the sample was taken from the person
+              type: bar
+              colour: 0
+              rollingAverage: false
 
-#             - label: People tested (7-day average)
-#               value: newPeopleTestedBySpecimenDate
-#               tooltip: 7 day rolling average of the daily number of people tested by specimen date
-#               type: line
-#               colour: 3
-#               fill: false
-#               rollingAverage: true
+            - label: People tested (7-day average)
+              value: newPeopleTestedBySpecimenDate
+              tooltip: 7 day rolling average of the daily number of people tested by specimen date
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage: true
 
-#         - heading: Cumulative
-#           tabType: chart
-#           fields:
-#             - label: Number of people tested
-#               value: cumPeopleTestedBySpecimenDate
-#               tooltip: Cumulative total number of people tested (positive or negative) by date the sample was taken from the person
-#               type: line
-#               colour: 0
-#               fill: true
-#               rollingAverage: false
+        - heading: Cumulative
+          tabType: chart
+          fields:
+            - label: Number of people tested
+              value: cumPeopleTestedBySpecimenDate
+              tooltip: Cumulative total number of people tested (positive or negative) by date the sample was taken from the person
+              type: line
+              colour: 0
+              fill: true
+              rollingAverage: false
 
-#         - heading: Data
-#           tabType: table
-#           fields:
-#             - label: Specimen date
-#               value: date
-#               type: date
-#               tooltip: Date the sample was taken from the person
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Specimen date
+              value: date
+              type: date
+              tooltip: Date the sample was taken from the person
 
-#             - label: Daily cases
-#               value: newCasesBySpecimenDate
-#               type: numeric
-#               tooltip: Daily number of new people with a lab-confirmed positive test result by date the sample was taken from the person
+            - label: Daily cases
+              value: newCasesBySpecimenDate
+              type: numeric
+              tooltip: Daily number of new people with a lab-confirmed positive test result by date the sample was taken from the person
 
-#             - label: Cumulative cases
-#               value: cumCasesBySpecimenDate
-#               type: numeric
-#               tooltip: Cumulative total number of new people with a lab-confirmed positive test result by date the sample was taken from the person
+            - label: Cumulative cases
+              value: cumCasesBySpecimenDate
+              type: numeric
+              tooltip: Cumulative total number of new people with a lab-confirmed positive test result by date the sample was taken from the person
 
-#             - label: Daily people tested
-#               value: newPeopleTestedBySpecimenDate
-#               type: numeric
-#               tooltip: Daily number of people tested (positive or negative) by date the sample was taken from the person
+            - label: Daily people tested
+              value: newPeopleTestedBySpecimenDate
+              type: numeric
+              tooltip: Daily number of people tested (positive or negative) by date the sample was taken from the person
 
-#             - label: Cumulative people tested
-#               value: cumPeopleTestedBySpecimenDate
-#               type: numeric
-#               tooltip: Cumulative total number of people tested (positive or negative) by date the sample was taken from the person
+            - label: Cumulative people tested
+              value: cumPeopleTestedBySpecimenDate
+              type: numeric
+              tooltip: Cumulative total number of people tested (positive or negative) by date the sample was taken from the person
 
-#         # TODO: GA to write and reference md file.  PF to check - do we link to different mds for each toggle within the card?
-#         - heading: About 
-#           tabType: metadata
-#           filename: cardMetadata/testing/cardPeopleTested.md
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardPeopleTested.md
 
-#     Reporting date:
-#       tabs:
-#         - heading: Daily
-#           tabType: chart
-#           barType: overlay
-#           fields:
-#             - label: Number of people tested
-#               value: newPeopleTestedByPublishDate
-#               tooltip: Daily number of new people tested (positive or negative) by date reported
-#               type: bar
-#               colour: 0
-#               rollingAverage: false
+    Reporting date:
+      tabs:
+        - heading: Daily
+          tabType: chart
+          barType: overlay
+          fields:
+            - label: Number of people tested
+              value: newPeopleTestedByPublishDate
+              tooltip: Daily number of new people tested (positive or negative) by date reported
+              type: bar
+              colour: 0
+              rollingAverage: false
 
-#             - label: People tested (7-day average)
-#               value: newPeopleTestedByPublishDate
-#               tooltip: 7 day rolling average of the number of new people tested by date reported
-#               type: line
-#               colour: 3
-#               fill: false
-#               rollingAverage: true
+            - label: People tested (7-day average)
+              value: newPeopleTestedByPublishDate
+              tooltip: 7 day rolling average of the number of new people tested by date reported
+              type: line
+              colour: 3
+              fill: false
+              rollingAverage: true
 
-#         - heading: Cumulative
-#           tabType: chart
-#           fields:                
-#             - label: Number of people tested
-#               value: cumPeopleTestedByPublishDate
-#               tooltip: Cumulative total number of people tested (positive or negative) by date reported
-#               type: line
-#               colour: 6
-#               fill: true
-#               rollingAverage: false
+        - heading: Cumulative
+          tabType: chart
+          fields:                
+            - label: Number of people tested
+              value: cumPeopleTestedByPublishDate
+              tooltip: Cumulative total number of people tested (positive or negative) by date reported
+              type: line
+              colour: 6
+              fill: true
+              rollingAverage: false
 
-#         - heading: Data
-#           tabType: table
-#           fields:
-#             - label: Date reported
-#               value: date
-#               type: date
-#               tooltip: Date reported by the Department of Health and Social Care
+        - heading: Data
+          tabType: table
+          fields:
+            - label: Date reported
+              value: date
+              type: date
+              tooltip: Date reported by the Department of Health and Social Care
 
-#             - label: Daily cases
-#               value: newCasesByPublishDate
-#               type: numeric
-#               tooltip: Daily number of new people with a lab-confirmed positive test result by date reported
+            - label: Daily cases
+              value: newCasesByPublishDate
+              type: numeric
+              tooltip: Daily number of new people with a lab-confirmed positive test result by date reported
 
-#             - label: Cumulative cases
-#               value: cumCasesByPublishDate
-#               type: numeric
-#               tooltip: Cumulative total number of people with a lab-confirmed positive test result by date reported
+            - label: Cumulative cases
+              value: cumCasesByPublishDate
+              type: numeric
+              tooltip: Cumulative total number of people with a lab-confirmed positive test result by date reported
 
-#             - label: Daily people tested
-#               value: newPeopleTestedByPublishDate
-#               type: numeric
-#               tooltip: Daily number of new people tested (positive or negative) by date reported
+            - label: Daily people tested
+              value: newPeopleTestedByPublishDate
+              type: numeric
+              tooltip: Daily number of new people tested (positive or negative) by date reported
 
-#             - label: Cumulative people tested
-#               value: cumPeopleTestedByPublishDate
-#               type: numeric
-#               tooltip: Cumulative total number of people tested (positive or negative) by date reported
+            - label: Cumulative people tested
+              value: cumPeopleTestedByPublishDate
+              type: numeric
+              tooltip: Cumulative total number of people tested (positive or negative) by date reported
 
-#         # TODO: GA to write and reference md file
-#         - heading: About 
-#           tabType: metadata
-#           filename: cardMetadata/testing/cardPeopleTested.md
+        - heading: About 
+          tabType: metadata
+          filename: cardMetadata/testing/cardPeopleTested.md
 
 # {{ EndDevOnlyBlock }}
 
