--- a/Layouts/healthcare.yaml
+++ b/Layouts/healthcare.yaml
@@ -91,9 +91,8 @@ cards:
           - label: Admissions
             value: cumAdmissions
             tooltip: Cumulative total number of COVID-19 patients admitted to hospital
-            type: line
+            type: bar
             colour: 0
-            fill: true
             rollingAverage: false
 
       - heading: Data
