--- a/Layouts/UKSummary.yaml
+++ b/Layouts/UKSummary.yaml
@@ -127,7 +127,7 @@ summary:
         chart:
           value: newDeathsByPublishDate
           type: line
-          colour: 0
+          colour: 6
           fill: true
           rollingAverage: true
           display: true
@@ -140,3 +140,26 @@ summary:
           - label: Total
             tooltip: Total number of deaths of people who have had a positive test result, reported up to {date}
             value: cumDeathsByPublishDate
+
+# {{ StartDevOnlyBlock }}
+
+      - caption: Deaths within 28 days of positive test
+        chart:
+          value: newDeaths28DaysByPublishDate
+          type: line
+          colour: 0
+          fill: true
+          rollingAverage: true
+          display: true
+        
+        valueItems: 
+          - label: Daily
+            tooltip: Daily number of deaths of people who have had a positive test result and died within 28 days, reported on {date} - chart shows 7-day rolling average
+            value: newDeathsByPublishDate
+
+          - label: Total
+            tooltip: Total number of deaths of people who had a positive test result and died within 28 days, reported up to {date}
+            value: cumDeathsByPublishDate
+
+# {{ EndDevOnlyBlock }}
+
