--- a/Layouts/UKSummary.yaml
+++ b/Layouts/UKSummary.yaml
@@ -143,23 +143,23 @@ summary:
 
 # {{ StartDevOnlyBlock }}
 
-      - caption: Deaths within 28 days of positive test
-        chart:
-          value: newDeaths28DaysByPublishDate
-          type: line
-          colour: 0
-          fill: true
-          rollingAverage: true
-          display: true
+      # - caption: Deaths within 28 days of positive test
+      #   chart:
+      #     value: newDeaths28DaysByPublishDate
+      #     type: line
+      #     colour: 0
+      #     fill: true
+      #     rollingAverage: true
+      #     display: true
         
-        valueItems: 
-          - label: Daily
-            tooltip: Daily number of deaths of people who have had a positive test result and died within 28 days, reported on {date} - chart shows 7-day rolling average
-            value: newDeaths28DaysByPublishDate
+      #   valueItems: 
+      #     - label: Daily
+      #       tooltip: Daily number of deaths of people who have had a positive test result and died within 28 days, reported on {date} - chart shows 7-day rolling average
+      #       value: newDeaths28DaysByPublishDate
 
-          - label: Total
-            tooltip: Total number of deaths of people who had a positive test result and died within 28 days, reported up to {date}
-            value: cumDeaths28DaysByPublishDate
+      #     - label: Total
+      #       tooltip: Total number of deaths of people who had a positive test result and died within 28 days, reported up to {date}
+      #       value: cumDeaths28DaysByPublishDate
 
 # {{ EndDevOnlyBlock }}
 
