--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1026,7 +1026,7 @@ cards:
         tabType: metadata
         filename: cardMetadata/cases/cardCasesAndRatesByArea.md
 
-  - heading: Weekly cases by local area in England
+  - heading: Cases by local area in England
     cardType: simpleExternalStatic
     # locationAware:
     #   excluded:
@@ -1037,8 +1037,10 @@ cards:
 
     fullWidth: false
     abstract: >
-      COVID-19 cases in England by Middle Super Output Area (MSOA).  MSOAs are small areas
-      with around 7,200 average population.  The data show 7 days' cases, but are updated daily.
+      COVID-19 cases (number of people with a lab-confirmed positive test result) in England
+      by Middle Super Output Area (MSOA).  MSOAs are small areas with around 7,200 average
+      population.  The data are updated daily, and show the latest 7 days for which complete
+      data are available.
 
     image: 
       url: https://c19pubdev.azureedge.net/assets/images/msoa-outline.png
