--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -1039,8 +1039,8 @@ cards:
     abstract: >
       COVID-19 cases (number of people with a lab-confirmed positive test result) in England
       by Middle Super Output Area (MSOA).  MSOAs are small areas with around 7,200 average
-      population.  The data are updated daily, and show the latest 7 days for which complete
-      data are available.
+      population.  The data are updated each weekday, and show the latest 7 days for which
+      complete data are available.
 
     image: 
       url: https://c19pubdev.azureedge.net/assets/images/msoa-outline.png
